Sat Dec 22 17:14:50 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c, menu.[ch], main.c: redo how the updating of
	  icons and tearoffs keys is done, load the foobar items in the
	  deffered way as well and sanitize this whole bit somewhat more.
	  It now fully nicely updates when you set/unset the icons/tearoff
	  keys.  And without having to reread folders.

	* gnome-panel-properties.c, gnome-run.c, launcher.c,
	  menu-properties.c, menu.c, panel-config.c, swallow.c:
	  Make dialog window settings sane after mucking with them.

	* gnome-panel-screenshot.c: get rid of tempnam usage to avoid warning

Sat Dec 22 15:12:42 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c, gnome-run.c, panel-config.c, swallow.c: fix up
	  the size request stuff so we get back some widgets which
	  disappeared because I was a wanker.

Sat Dec 22 14:52:42 2001  George Lebl <jirka@5z.com>

	* gnome-panel-screenshot.c, gnome-panel-properties.c, status.c:
	  more fixes.  Having things actually compile is usually good.

Sat Dec 22 13:56:23 2001  George Lebl <jirka@5z.com>

	* menu.c: fix stupid typo

Sat Dec 22 13:44:25 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, drawer-widget.c, drawer.c, extern.c,
	  foobar-widget.c, gnome-panel-properties.c,
	  gnome-panel-screenshot.c, gnome-run.c, launcher.c,
	  menu-properties.c, menu.c, nothing.cP, panel-config.c,
	  panel-util.c, panel.c, panel.h, status-docklet.c, status.c,
	  swallow.c, xstuff.c: Yet more de-deprecation.  Now all that's
	  left is the clist stuff in gnome-run, but jrb says he has a
	  new runbox in production so it seems pointless to spend time
	  on porting that now.

Fri Dec 21 18:44:22 2001  George Lebl <jirka@5z.com>

	* Makefile.am, aligned-widget.c, applet.c, basep-widget.c,
	  button-widget.c, distribution.c, drawer-widget.c, drawer.c,
	  edge-widget.c, floating-widget.c, foobar-widget.c, foobar-widget.h,
	  gnome-panel-properties.c, gnome-run.c, menu.c, nothing.cP,