@@ -1,3 +1,9 @@
+Sat Dec 22 23:12:54 2001  George Lebl <jirka@5z.com>
+
+	* Makefile.am, foobar-widget.c, gnome-panel-screenshot.c, panel.c,
+	  session.c: Compile with G_DISABLE_DEPRECATED and
+	  GNOME_DISABLE_DEPRECATED
+
 Sat Dec 22 17:14:50 2001  George Lebl <jirka@5z.com>
 
 	* foobar-widget.c, menu.[ch], main.c: redo how the updating of
